2.0.3 - Added: widget v6 integration allows pickup point selection for Germany and other countries
      - Added: other specific countries price rules
      - Added: allow specific countries via Packeta carrier configuration
      - Added: address delivery support
      - Updated: configuration moved to Packeta delivery method
      - Updated: pricing rules moved to dedicated admin section
      - Updated: place order mixins
      - Fixed: Magento installation with database prefix is now supported